fix nav add gap

--- a/html-css/lession3/exercise1/styles/layouts/header.css
+++ b/html-css/lession3/exercise1/styles/layouts/header.css
@@ -34,6 +34,7 @@
 
 .header__nav-link {
     letter-spacing: 1px;
+    margin: 0 1em;
     color: var(--text-color-light);
     font-weight: var(--font-weight-regular);
     border-bottom: 2px solid var(--light);
